[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.6",
    "langchain-google-genai>=4.2.0",
    "pydantic-settings>=2.12.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload"
